# data-matrix-yolo

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: inference.py  prepare_data.py  train.py
src/: __init__.py
src/config/: __init__.py  default.yaml
src/data/: __init__.py  augmentation.py  datamatrix.py  dataset.py  sample_data.py  synth_data.py
src/data/exp/: dataset_info.json  state.json
src/models/: __init__.py  utils.py  yolo.py
src/training/: __init__.py  callbacks.py  example.py  trainer.py  training.py
src/utils/: __init__.py  logging.py  visualization.py
