[tool.poetry]
name = "data-matrix-yolo"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
transformers = "^4.48.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
